feat: websocket notifications & jobs for bg tasks
