# server/src/main/java/com/rattatarr/rattatarr/models/JobStatus.java
@@ -1,0 +1,8 @@
+package com.rattatarr.rattatarr.models;
+
+public enum JobStatus {
+    PENDING,
+    RUNNING,
+    COMPLETED,
+    FAILED
+}
